# qpm-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  quick  vinst
src/: cipher.rs  main.rs
