[package]
name = "qpm"
version = "0.1.4"
edition = "2021"
description = "Quick command line password manager written in Rust."
authors = ["Andrew <khimchuk.io@gmail.com>"]
license = "MIT"
repository = "https://github.com/khimchuk/qpm-cli"
readme = "README.md"
documentation = "https://docs.rs/crate/qpm/latest"

[dependencies]
rusqlite = "0.30.0"
home = "0.5.9"
rpassword = "7.3.1"
